

[tool.pytest.ini_options]
minversion = "6.0"
# opts:
# `--strict-markers` - Raise error on unexpected pytest markers being used (add new markers to `markers` config)
# `-n2` - parallelise over two threads (uses pytest-xdist)
# `--cov --cov-report=xml --cov-config=pyproject.toml` - generate coverage report for tests (uses pytest-cov; call `--no-cov` in CLI to switch off; `--cov-config` include to avoid bug)
addopts = "-rav --strict-markers -n2 --cov --cov-report=xml --cov-config=pyproject.toml"
testpaths = ["tests"]
# to mark a test, decorate it with `@pytest.mark.[marker-name]`
markers = []
filterwarnings = []

[tool.coverage.run]
branch = true
source = ["src/"]

[tool.coverage.report]
fail_under = 84

[tool.coverage.html]
directory = "reports/coverage"

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"

[tool.ruff]
line-length = 100
preview = true # required to activate many pycodestyle errors and warnings as of 2024-03-13

[tool.ruff.format]
exclude = [".*.egg-info", "requirements/**"]
skip-magic-trailing-comma = true
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    # pycodestyle errors
    "E",
    # pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Docstrings
    "D"
]
ignore = [
    # here and below, rules are redundant with formatter, see
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "E501",
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300"
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

# Ignore `E402` (import violations) and `F401` (unused imports) in all `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"*.ipynb" = ["E402"]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 200
ignore-overlong-task-comments = true

[tool.codespell]
skip = "tests/*.py,AUTHORS.md"
count = ""
quiet-level = 3
# Uncomment and add words that are false flags as a comma delimited string
# ignore-words-list = ""

[tool.setuptools.packages.find]
include = ["osmox*"]
where = ["src"]

[tool.setuptools.package-data]
# Add file globs from the source code directory if they include non-py files that should be packaged
# E.g. "fixtures/**/*"
# "py.typed" is added by default. It allows `mypy` to register the package as having type hints.
osmox = ["py.typed", "schema.json"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
        "Development Status :: 2 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
    ]

name = "osmox"
authors = [
    { name = "Fred Shone", email = "fred.shone@arup.com" },
]
maintainers = [
    { name = "Michael Fitzmaurice", email = "michael.fitzmaurice@arup.com" },
    { name = "Theodore Chatziioannou", email = "theodore.chatziioannou@arup.com" },
    { name = "Val Ismaili", email = "62333033+val-ismaili@users.noreply.github.com" },
    { name = "Bryn Pickering", email = "17178478+brynpickering@users.noreply.github.com" },
]
description = "A tool for extracting locations and features from OpenStreetMap (OSM) data."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["osmox", "arup"]
license = { text = "MIT" }
dynamic = ["dependencies", "optional-dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/base.txt"] }
version = { attr = "osmox.__version__" }
[project.scripts]
osmox="osmox.cli:cli"

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements/dev.txt"] }

[project.urls]
repository = "https://github.com/arup-group/osmox"
documentation = "https://arup-group.github.io/osmox"
changelog = "https://github.com/arup-group/osmox/blob/main/CHANGELOG.md"
